2003-01-08  Steve Langasek  <vorlon@debian.org>

	* client/theme.c: use a more portable variadic macro
	  syntax, to address OS X concerns

2003-01-01  Jeff Breidenbach  <jab@debian.org>

	* debian/gnocatan-meta-server.init: privilige reduction

	* debian/control: adjust dependencies, add co-maintainers.

	* debian/changelong: prepare for upload to Debian

2002-12-25  Roman Hodek  <roman@hodek.net>

	* configure.in: Some changes to make it work with autoconf2.50 and
	automake-1.7.
	Set version to 0.7.1.90 [internal snapshot]

	* depcomp, po/ChangeLog: new

	* acconfig.h: removed obsolete file

	* Makefile.am (distclean-local): remove some more stuff

	* gnocatan.spec: applied patch by Brian Wellington

	* client/player.c (player_has_quit): remove player also from
	internal list for a more meaningful message on reconnection.

	* server/player.c, server/pregame.c, server/server.h: remove
	redundant is_game_full variable and replace by
	game->num_players == game->params->num_players
	
	* server/player.c (player_revive): send an explicit note to
	players that a reconnection has happened

	* server/player.c (player_set_name): explicitly tell if name was
	already in use and so why one is 'anonymous'

2002-07-22  Roman Hodek  <roman@hodek.net>

	* client/Makefile.am (install-data-hook): fix silly thinko.

2002-07-21  Roman Hodek  <roman@hodek.net>

	* 0.7.1 released!!
	
	* debian/changelog, gnocatan.spec: bump version number to 0.7.1.
	
	* client/gui.c (menu_settings_cb): use GTK_EXPAND attribute in x
	dir (looks better). Delay signal_connect calls for language
	buttons to avoid gtk assertation failures.

	* client/Makefile.am: omit CVS dirs for theme file installing and
	exporting

	* client/help/C/Makefile.am: $(DESTDIR) was missing

2002-07-09  Roman Hodek  <roman@hodek.net>

	* ai/greedy.c: Introduce better, situation-related chat messages.

	* ai/client.c (client_chat): obey chatty parameter, call
	computer_funcs.chat() with occasion parameters
