@@ -1,1 +1,2 @@
 usr/games/gnocatan-server-gtk
+usr/share/gnome/apps/Games/gnocatan-server.desktop
