@@ -1,0 +1,6 @@
+[Desktop Entry]
+Name=Gnocatan Server
+Comment=Gnocatan GUI server
+Exec=gnocatan-server-gtk
+Terminal=0
+Type=Application
